{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 912,
  "lineage": "3fe264ee-a458-b76e-6172-b6dc91e6bbed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "qb_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f6451e96c8303ab",
            "domain": "vpc",
            "id": "eipalloc-07f6451e96c8303ab",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-108-116-157.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.116.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "qb-EIP-for-NAT"
            },
            "tags_all": {
              "Name": "qb-EIP-for-NAT"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.qb_gw",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "qb_bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0f1259dd1c90938",
            "arn": "arn:aws:ec2:ap-south-1:111766607077:instance/i-06c43ae9a70da002c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c43ae9a70da002c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AvantiFellows",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fe15c9373789d344",
            "private_dns": "ip-10-0-0-16.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.16",
            "public_ip": "13.126.221.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05eac607ac44bb90c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d1df022bbb633335"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037fe27e536829000",
            "tags": {
              "Name": "qb-Bastion-Host"
            },
            "tags_all": {
              "Name": "qb-Bastion-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1df022bbb633335"
            ]
          },
          "dependencies": [
            "aws_security_group.qb_sg_bastion",
            "aws_subnet.qb_subnet_1",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "qb_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:111766607077:internet-gateway/igw-00ba24a39fa78597e",
            "id": "igw-00ba24a39fa78597e",
            "owner_id": "111766607077",
            "vpc_id": "vpc-0dc75da483c87db1a"
          },
          "dependencies": [
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "qb_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:111766607077:loadbalancer/app/qb-lb-asg/2c141bbee5a84e0a",
            "arn_suffix": "app/qb-lb-asg/2c141bbee5a84e0a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "qb-lb-asg-889802886.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:111766607077:loadbalancer/app/qb-lb-asg/2c141bbee5a84e0a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "qb-lb-asg",
            "preserve_host_header": false,
            "security_groups": [
              "sg-047ab4d685f5f269a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-037fe27e536829000"
              },
              {
                "subnet_id": "subnet-0f1dd27c1667ca830"
              }
            ],
            "subnets": [
              "subnet-037fe27e536829000",
              "subnet-0f1dd27c1667ca830"
            ],
            "tags": {
              "Name": "qb-lb"
            },
            "tags_all": {
              "Name": "qb-lb"
            },
            "vpc_id": "vpc-0dc75da483c87db1a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_internet_gateway.qb_gw",
            "aws_security_group.qb_sg_for_elb",
            "aws_subnet.qb_subnet_1",
            "aws_subnet.qb_subnet_1a",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "qb_alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:111766607077:listener/app/qb-lb-asg/2c141bbee5a84e0a/d99d68fd94cbeb1d",
            "certificate_arn": "arn:aws:acm:ap-south-1:111766607077:certificate/9a8f45c3-e386-4ef7-bf4b-659180eb638f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:111766607077:targetgroup/qb-tf-lb-alb-tg/dcecf68a6b0a72f5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:111766607077:listener/app/qb-lb-asg/2c141bbee5a84e0a/d99d68fd94cbeb1d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:111766607077:loadbalancer/app/qb-lb-asg/2c141bbee5a84e0a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.qb_gw",
            "aws_lb.qb_lb",
            "aws_lb_target_group.qb_alb_tg",
            "aws_security_group.qb_sg_for_elb",
            "aws_subnet.qb_subnet_1",
            "aws_subnet.qb_subnet_1a",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "qb_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:111766607077:listener/app/qb-lb-asg/2c141bbee5a84e0a/3d5c4c3be1b093ed",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:111766607077:targetgroup/qb-tf-lb-alb-tg/dcecf68a6b0a72f5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:111766607077:listener/app/qb-lb-asg/2c141bbee5a84e0a/3d5c4c3be1b093ed",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:111766607077:loadbalancer/app/qb-lb-asg/2c141bbee5a84e0a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.qb_gw",
            "aws_lb.qb_lb",
            "aws_lb_target_group.qb_alb_tg",
            "aws_security_group.qb_sg_for_elb",
            "aws_subnet.qb_subnet_1",
            "aws_subnet.qb_subnet_1a",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "qb_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:111766607077:targetgroup/qb-tf-lb-alb-tg/dcecf68a6b0a72f5",
            "arn_suffix": "targetgroup/qb-tf-lb-alb-tg/dcecf68a6b0a72f5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/docs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:111766607077:targetgroup/qb-tf-lb-alb-tg/dcecf68a6b0a72f5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "qb-tf-lb-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc75da483c87db1a"
          },
          "dependencies": [
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "qb_nat_for_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f6451e96c8303ab",
            "association_id": "eipassoc-0ced3ed6c7ed539af",
            "connectivity_type": "public",
            "id": "nat-0a22bb4a6b43e6088",
            "network_interface_id": "eni-0f840c19563e5781d",
            "private_ip": "10.0.0.28",
            "public_ip": "3.108.116.157",
            "subnet_id": "subnet-037fe27e536829000",
            "tags": {
              "Name": "qb-NAT-for-private-subnet"
            },
            "tags_all": {
              "Name": "qb-NAT-for-private-subnet"
            }
          },
          "dependencies": [
            "aws_eip.qb_eip",
            "aws_internet_gateway.qb_gw",
            "aws_subnet.qb_subnet_1",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "qb_rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:111766607077:route-table/rtb-0ac927efd7a92ade6",
            "id": "rtb-0ac927efd7a92ade6",
            "owner_id": "111766607077",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a22bb4a6b43e6088",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc75da483c87db1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.qb_eip",
            "aws_internet_gateway.qb_gw",
            "aws_nat_gateway.qb_nat_for_private_subnet",
            "aws_subnet.qb_subnet_1",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "qb_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:111766607077:route-table/rtb-08c8ca21c07f4d8c2",
            "id": "rtb-08c8ca21c07f4d8c2",
            "owner_id": "111766607077",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ba24a39fa78597e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc75da483c87db1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.qb_gw",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "qb_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff78ac6191571f59",
            "route_table_id": "rtb-08c8ca21c07f4d8c2",
            "subnet_id": "subnet-037fe27e536829000"
          },
          "dependencies": [
            "aws_internet_gateway.qb_gw",
            "aws_route_table.qb_rt_public",
            "aws_subnet.qb_subnet_1",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "qb_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8f9d34e6c229ec3",
            "route_table_id": "rtb-08c8ca21c07f4d8c2",
            "subnet_id": "subnet-0f1dd27c1667ca830"
          },
          "dependencies": [
            "aws_internet_gateway.qb_gw",
            "aws_route_table.qb_rt_public",
            "aws_subnet.qb_subnet_1a",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "qb_rta3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7a72bf79e1d9683",
            "route_table_id": "rtb-0ac927efd7a92ade6",
            "subnet_id": "subnet-06bb03699f341a054"
          },
          "dependencies": [
            "aws_eip.qb_eip",
            "aws_internet_gateway.qb_gw",
            "aws_nat_gateway.qb_nat_for_private_subnet",
            "aws_route_table.qb_rt_private",
            "aws_subnet.qb_subnet_1",
            "aws_subnet.qb_subnet_2",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "qb_sg_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:111766607077:security-group/sg-0d1df022bbb633335",
            "description": "Bastion host security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1df022bbb633335",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "qb-sg-bastion",
            "name_prefix": "",
            "owner_id": "111766607077",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc75da483c87db1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "qb_sg_for_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:111766607077:security-group/sg-0cec863abaccc0474",
            "description": "security group for EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cec863abaccc0474",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http from load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-047ab4d685f5f269a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "qb-sg-for-ec2",
            "name_prefix": "",
            "owner_id": "111766607077",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc75da483c87db1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.qb_sg_for_elb",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "qb_sg_for_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:111766607077:security-group/sg-047ab4d685f5f269a",
            "description": "security group for ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047ab4d685f5f269a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "qb-sg-for-elb",
            "name_prefix": "",
            "owner_id": "111766607077",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc75da483c87db1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.16/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-806781819",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cec863abaccc0474",
            "security_group_rule_id": "sgr-064f5c8dd97995839",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.qb_bastion_host",
            "aws_security_group.qb_sg_bastion",
            "aws_security_group.qb_sg_for_ec2",
            "aws_security_group.qb_sg_for_elb",
            "aws_subnet.qb_subnet_1",
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "qb_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:111766607077:subnet/subnet-037fe27e536829000",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037fe27e536829000",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111766607077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dc75da483c87db1a"
          },
          "dependencies": [
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "qb_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:111766607077:subnet/subnet-0f1dd27c1667ca830",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1dd27c1667ca830",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111766607077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dc75da483c87db1a"
          },
          "dependencies": [
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "qb_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:111766607077:subnet/subnet-06bb03699f341a054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bb03699f341a054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111766607077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dc75da483c87db1a"
          },
          "dependencies": [
            "aws_vpc.qb_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "qb_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:111766607077:vpc/vpc-0dc75da483c87db1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-03317fbde37b0a84d",
            "default_route_table_id": "rtb-0a98787fa1a33a855",
            "default_security_group_id": "sg-00957490f243a4a53",
            "dhcp_options_id": "dopt-e862b783",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc75da483c87db1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a98787fa1a33a855",
            "owner_id": "111766607077",
            "tags": {
              "Name": "qb-vpc"
            },
            "tags_all": {
              "Name": "qb-vpc"
            }
          }
        }
      ]
    }
  ]
}